# seesaw

./: README.md
binaries/seesaw_engine/: main.go
binaries/seesaw_watchdog/: main.go
cli/: control.go  show.go
common/conn/: rpc.go
common/seesaw/: seesaw.go  util.go
common/server/: server.go
docs/: HEALTHCHECK_HYBRID_DEPLOYMENT.md  PHASE4.1_COMPLETION.md  PHASE4_COMPLETE.md  PHASE4_HEALTHCHECK_SERVER_REWRITE.md  RUST-MIGRATION-PLAN.md  administration-guide.md  codebase-architecture.md  healthcheck-server-config.md  healthcheck-server-grafana-dashboard.json  healthcheck-server-metrics.md  healthcheck-server-migration.md  security-hardening.md  user-guide.md
ecu/: core.go  stats.go
engine/: core.go  engine_test.go  ha.go  healthcheck.go  healthcheck_test.go  ipc.go  ipc_test.go  sync.go  sync_test.go  vserver.go  vserver_test.go
engine/config/: config.go  config_test.go  engine.go  fetcher.go  notifier.go  types.go
etc/seesaw/: seesaw.cfg.example
ha/: core.go  net.go
healthcheck/: core.go  dns.go  healthcheck_bench_test.go  ping.go  radius.go  rust_adapter.go  rust_adapter_test.go  rust_bench_test.go  tcp.go
healthcheck/rust/: healthcheck.go  healthcheck_test.go
healthcheck/server/: main.go
ipvs/: backend.go  backend_libnl.go  backend_rust.go  ipvs.go
ipvs/rust/: ipvs.go
ncc/: bgp.go  ip.go  iptables.go  ipvs.go  lb.go
ncc/client/: dummy.go  ncc_client.go
netlink/: netlink.go
pb/config/: config.pb.go  config.proto
quagga/: bgp.go
rust/: .dockerignore  .gitignore  Cargo.toml  INTEGRATION.md  README.md  STATUS.md
rust/crates/common/: Cargo.toml
rust/crates/common/src/: error.rs  lib.rs  logging.rs
rust/crates/healthcheck/: BENCHMARKS.md  Cargo.toml
rust/crates/healthcheck-ffi/: Cargo.toml  build.rs  healthcheck.h
rust/crates/healthcheck-ffi/src/: lib.rs
rust/crates/healthcheck-server/: Cargo.toml  Dockerfile  MONITORING.md  OPENTELEMETRY.md  PERFORMANCE.md  README.md  docker-compose.jaeger.yml  docker-compose.yml  prometheus.yml
rust/crates/healthcheck-server/benches/: metrics_overhead.rs
rust/crates/healthcheck-server/examples/: healthcheck-server-development.yaml  healthcheck-server-high-volume.yaml  healthcheck-server-minimal.yaml  healthcheck-server-production.yaml  healthcheck-server-with-telemetry.yaml
rust/crates/healthcheck-server/grafana/provisioning/dashboards/: healthcheck.yml
rust/crates/healthcheck-server/grafana/provisioning/datasources/: prometheus.yml
rust/crates/healthcheck-server/src/: config.rs  http_server.rs  lib.rs  main.rs  manager.rs  metrics.rs  notifier.rs  proxy.rs  server.rs  telemetry.rs  types.rs
rust/crates/healthcheck-server/tests/: hybrid_integration_test.sh  integration_ipv6_test.sh  integration_test.sh  manager_test.rs  monitoring_stack_test.sh  notifier_test.rs  proxy_test.rs
rust/crates/healthcheck-server/tests/e2e/: docker-compose.e2e.yml  healthcheck-server.e2e.yaml  nginx.conf  proxy-simulator.sh  run-e2e-tests.sh
rust/crates/healthcheck/benches/: healthcheck_bench.rs
rust/crates/healthcheck/src/: checkers.rs  lib.rs  monitor.rs  types.rs
rust/crates/ipvs/: Cargo.toml
rust/crates/ipvs-ffi/: Cargo.toml  ipvs.h
rust/crates/ipvs-ffi/src/: lib.rs
rust/crates/ipvs/src/: commands.rs  lib.rs  messages.rs  netlink.rs  types.rs
rust/crates/ipvs/tests/: integration_test.rs
rust/crates/vrrp/: Cargo.toml  README.md
rust/crates/vrrp-ffi/: Cargo.toml  build.rs  cbindgen.toml  vrrp.h
rust/crates/vrrp-ffi/src/: lib.rs
rust/crates/vrrp/examples/: simple_vrrp.rs
rust/crates/vrrp/src/: lib.rs  packet.rs  socket.rs  state_machine.rs  types.rs
rust/crates/vrrp/tests/: integration_test.rs
scripts/: build-hybrid-healthcheck.sh  check-healthcheck.sh  fix-clippy.sh
test_tools/ncc_test_tool/: main.go
vrrp/: manager.go  manager_test.go
vrrp/rust/: vrrp.go  vrrp_test.go
watchdog/: service.go
