[package]
name = "healthcheck-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "healthcheck-server"
path = "src/main.rs"

[dependencies]
healthcheck = { path = "../healthcheck" }
common = { path = "../common" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
humantime-serde = "1.1"
validator = { version = "0.16", features = ["derive"] }
dirs = "5.0"

# Async channels and synchronization
tokio-stream = "0.1"
dashmap = "6.1"  # Concurrent HashMap

# Unix socket communication
tokio-util = { version = "0.7", features = ["codec"] }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }

[dev-dependencies]
tokio-test = "0.4"
