[package]
name = "healthcheck-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "healthcheck-server"
path = "src/main.rs"

[dependencies]
healthcheck = { path = "../healthcheck" }
common = { path = "../common" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
humantime-serde = "1.1"
validator = { version = "0.16", features = ["derive"] }
dirs = "5.0"

# Async channels and synchronization
tokio-stream = "0.1"
dashmap = "6.1"  # Concurrent HashMap

# Unix socket communication
tokio-util = { version = "0.7", features = ["codec"] }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }

# Metrics
prometheus-client = "0.22"

# HTTP server for metrics endpoint
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }

# OpenTelemetry
opentelemetry = { version = "0.27", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.27", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["trace", "metrics", "grpc-tonic", "http-proto"] }
tracing-opentelemetry = "0.28"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "metrics_overhead"
harness = false
