[package]
name = "healthcheck"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
common = { path = "../common" }
tokio.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
humantime-serde = "1.1"

# HTTP/HTTPS health checks
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }

# DNS health checks
trust-dns-resolver = "0.23"

# Metrics and timing
prometheus-client = "0.22"

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber.workspace = true
mockall.workspace = true
