[package]
name = "ipvs-ffi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ipvs = { path = "../ipvs" }
common = { path = "../common" }
libc.workspace = true
