[package]
name = "vrrp-ffi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
vrrp = { path = "../vrrp" }
tokio.workspace = true
libc.workspace = true

[build-dependencies]
cbindgen = "0.27"
